# cs171-hw3-2025fall-JerryChen1125

./: README.md
data/: cbox_no_light.exr  cbox_no_light_refract.exr  ext.cmake
include/rdr/: bvh_tree.h  karras_bvh_gpu.h  math_utils.h
report/: report.aux  report.fdb_latexmk  report.fls  report.tex
src/: CMakeLists.txt  accel.cpp  bsdf.cpp  integrator.cpp  karras_bvh_gpu.cu  path.cpp
